# Automata-1-2023-labs

./: .flake8  .gitignore  LICENSE  pyproject.toml  requirements.txt
lab1/: .gitignore  README.md  ReportLab1.tex  __init__.py  pyproject.toml  requirements.txt
lab1/automata/: __init__.py  base.py
lab1/automata/converters/: __init__.py  enfa_to_nfa.py
lab1/core/: __init__.py  base.py
lab1/core/converters/: __init__.py  enfa_to_nfa.py
lab1/data/: automata_0.json  automata_1.json  automata_2.json  automata_3.json  automata_4.json
lab1/examples/: example.py
lab1/results/: nfa-automata_0.json  nfa-automata_1.json  nfa-automata_2.json  nfa-automata_3.json  nfa-automata_4.json
lab1/tests/: test_automata_io.py  test_enfa_to_nfa.py  test_marshalling.py
lab2/: ReportLab2.tex  __init__.py  base.py
lab2/lab2/: first_method.py  second_method.py
lab2/tests/: test_base.py  test_convert_mealy_to_moore.py  test_data.py
lab3/: ReportLab3.tex  __init__.py  base.py
lab3/data/: automaton1.json  automaton2.json  automaton3.json  automaton4.json  automaton5.json  automaton6.json
lab3/examples/: lab3.py
lab3/results/: bipole-automaton1  bipole-automaton2  bipole-automaton3  bipole-automaton4  bipole-automaton5  bipole-automaton6  buchi-automaton1  buchi-automaton2  buchi-automaton3  buchi-automaton4  buchi-automaton5  buchi-automaton6  composed-buchi-automaton2-automaton4  composed-buchi-automaton3-automaton6  composed-buchi-automaton4-automaton1  composed-buchi-automaton5-automaton3  composed-buchi-automaton6-automaton2  concatenated-buchi-automaton2-automaton4  concatenated-buchi-automaton3-automaton6  concatenated-buchi-automaton4-automaton1  concatenated-buchi-automaton5-automaton3  concatenated-buchi-automaton6-automaton2  strong-iteration-automaton1  strong-iteration-automaton2  strong-iteration-automaton3  strong-iteration-automaton4  strong-iteration-automaton6
lab3/tests/: test_base.py  test_concatenation.py  test_regex.py
lab4/examples/: ltl_unab.py  vis_kripke_model.py  visualize_ltl_automaton.py  visualize_product_automaton.py
lab5/examples/: visualize_automaton.py  visualize_original.py
lab5/lab5/: core.py
lab5/tests/: core_test.py
lab6/: rep.tex
lab7/: report.tex  visualize.py
