[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Automata"
version = "0.1.0"
description = "A brief description of my package."
authors = ["Kyryl R <kyryl.ryabov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "lab1" },
    { include = "lab2" },
    { include = "lab3" },
    { include = "lab4" },
]

[tool.poetry.scripts]
black = "black:main"
lab1 = "lab1.examples.example:main"
lab3 = "lab3.examples.lab3:main"
vis_kripke_model = "lab4.examples.vis_kripke_model:main"
visualize_ltl_automaton = "lab4.examples.visualize_ltl_automaton:main"
visualize_product_automaton = "lab4.examples.visualize_product_automaton:main"
check_with_bfs = "lab4.examples.check_with_bfs:main"
ltl_unab = "lab4.examples.ltl_unab:main"
viz_or_lab5 = "lab5.examples.visualize_original:main"
viz_lab5 = "lab5.examples.visualize_automaton:main"

[tool.poetry.dependencies]
python = "^3.11"
automata-lib = {extras = ["visual"], version = "^8.1.0"}
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.2"
black = "^23.9.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
  | foo.py           # also separately exclude a file named foo.py
                      # at the root of the project
)
'''

[tool.pytest.ini-options]
minversion = "6.0"
addopts = "--cov=lab1 --cov-report=html"
testpaths = [
    "tests",
]

