[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lab1"
version = "0.1.0"
description = "A brief description of my package."
authors = ["Kyryl R <kyryl.ryabov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
black = "black:main"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.9.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
  | foo.py           # also separately exclude a file named foo.py
                      # at the root of the project
)
'''

[tool.pytest.ini-options]
minversion = "6.0"
addopts = "--cov=lab1 --cov-report=html"
testpaths = [
    "tests",
]

